# TheRegiment

./: .env.example.md  .env.template  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.bot  Makefile  README.md  architecture.md  buildspec.env.md  buildspec.yaml  demo_lst_logging.py  docker-compose.yml  pyproject.toml
.cursor/rules/: theregimentrules.mdc
.github/workflows/: ci.yml
Docs2/lst_files/: LST_Checklist.md  lst_automation_scheduler.md  lst_battle_station_ui.md  lst_cardio_regiment_engine.md  lst_checkin_analyzer.md  lst_dspy_flag_engine.md  lst_infraction_monitor.md  tech-stack.md
battle-station-ui/: .dockerignore  package.json  tailwind.config.js
docker/api/: Dockerfile
docker/engines/: .dockerignore
docker/engines/cardio/: Dockerfile
docker/engines/checkin/: Dockerfile
docker/engines/dspy/: Dockerfile
docker/engines/infraction/: Dockerfile
docker/engines/meal_delivery/: Dockerfile
docker/engines/onboarding/: Dockerfile
docker/engines/scheduler/: Dockerfile
docker/engines/training/: Dockerfile
docker/ui/: Dockerfile
docs/: Cursor_prompt_template.md  HST_Master.md  LST_Master.md  project_manifest.md  schema_definitions.md  tech-stack.md
docs/audit_log/: build_progress.md
docs/engines/: lst_meal_delivery_engine.md  lst_onboarding_engine.md  lst_training_dispatcher.md
docs/infrastructure/: ci_cd.md  deployment.md  dev_tools.md  docker.md  env_variables.md  monitoring.md  security.md  test_config.md
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  cardio.py  checkins.py  clients.py  job_cards.py  meals.py  templates.py  training.py
src/bot/: __init__.py  onboard_commands.py
src/core/: database.py  migrations.py
src/core/logging/: __init__.py  logger.py  lst_validation.py  validation.py
src/engines/: __init__.py
src/engines/meal_delivery/: __init__.py  compiler.py  plan_selection.py  runner.py
src/engines/onboarding/: __init__.py  engine.py
src/schemas/: __init__.py  models.py
tests/: __init__.py  test_lst_logging.py
